feat: add recurring notification using firebase job dispatcher

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-ads:11.0.4'
     implementation 'com.google.firebase:firebase-core:11.0.4'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
