--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,14 @@
         <service android:name=".widget.WidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS">
         </service>
+
+        <service
+            android:exported="false"
+            android:name=".utils.NotificationService">
+            <intent-filter>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
