--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ buildscript {
 }
 
 allprojects {
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xlint:deprecation"}
     repositories {
         google()
         jcenter()
