feat: add search feature for users list

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
         </service>
 
         <activity android:name=".activities.UsersListActivity"
+            android:theme="@style/UsersListTheme"
             android:parentActivityName=".activities.MainActivity"/>
     </application>
 
