feat:add find friends feature

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,9 @@ android {
     }
     compileSdkVersion 27
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.ahmdkhled.wechat"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
