--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,7 @@
         <activity
             android:name=".activities.CommentsActivity"
             android:parentActivityName=".activities.MainActivity" />
+        <activity android:name=".activities.MessagesListActivity" />
         <activity android:name=".activities.ChatActivity"></activity>
     </application>
 
