--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,13 @@
         </activity>
         <activity
             android:name=".activities.MainActivity"
-            android:launchMode="singleTop" />
+            android:launchMode="singleInstance" >
+            <intent-filter>
+                <action android:name="com.ahmdkhled.wechat.activities.MainActivity"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+
+        </activity>
         <activity
             android:name=".activities.LoginActivity"
             android:screenOrientation="portrait"
